--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.12.2",
-    "next": "^14.0.2-canary.6",
-    "react": "^18.2.0",
+    "@tanstack/react-query": "5.12.2",
+    "next": "14.0.2-canary.6",
+    "react": "18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
